fix(sds/material): ensure that the floating label is left-bound on the right-aligned examples
OUI-3524

--- a/projects/sds/src/app/code-examples/code-examples/form/previews/input-prefixes-and-suffixes/form-example-input-prefixes-and-suffixes-preview.component.scss
+++ b/projects/sds/src/app/code-examples/code-examples/form/previews/input-prefixes-and-suffixes/form-example-input-prefixes-and-suffixes-preview.component.scss
@@ -24,6 +24,10 @@
 				flex-grow: 1;
 			}
 
+			.mdc-notched-outline__leading {
+				flex-grow: 0;
+			}
+
 			.mat-mdc-form-field-hint-wrapper {
 				justify-content: flex-end;
 
